--- a/src/app/component/componentFormulario/componenteFormulario.component.html
+++ b/src/app/component/componentFormulario/componenteFormulario.component.html
@@ -1,35 +1,35 @@
 <form [formGroup]="formulario">
     @if (formulario.get('livroNome').hasError('required') && formulario.get('livroNome')) {
-        <p>O campo nome é obrigatorio</p>
+    <p>O campo nome é obrigatorio</p>
     }
     <input type="text" formControlName="livroNome" placeholder="Nome do Livro" class="form-group">
 
-    <input type="text" formControlName="livroAutor"  placeholder="Nome do Autor" class="form-group">
+    <input type="text" formControlName="livroAutor" placeholder="Nome do Autor" class="form-group">
     @if (formulario.get('livroAutor').hasError('required') && formulario.get('livroAutor')) {
-        <p>O campo autor é obrigatorio</p>
+    <p>O campo autor é obrigatorio</p>
     }
-    
+
     <input type="button" value="Pesquisar" (click)="pesquisar()" class="button" [disabled]="false">
 
 </form>
 
-<table class ="table">
+<table class="table">
     <thead>
         <tr>
             <th>#</th>
-            <th>Nome</th>
+            <th>Capa</th>
+            <th>Livro</th>
             <th>Autor</th>
             <th>Descrição</th>
-            <th>Capa</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let v of vetor; index as indice">
             <td>{{indice}}</td>
+            <td><img src="{{v.capaUrl}}" alt=""></td>
             <td>{{v.nomeLivro}}</td>
             <td>{{v.nomeAutor}}</td>
             <td>{{v.descricao}}</td>
-            <td><img src="{{v.capaUrl}}" alt=""></td>
         </tr>
     </tbody>
-</table>        
+</table>
