--- a/src/app/component/componentFormulario/componenteFormulario.component.css
+++ b/src/app/component/componentFormulario/componenteFormulario.component.css
@@ -1,3 +1,4 @@
+/* Navbar */
 nav {
     background-color: #333;
     padding: 1rem;
@@ -28,14 +29,13 @@ nav {
     background-color: #555;
 }
 
-
-
+/* Formulário */
 form {
     width: 100%;
     max-width: 450px;
     margin: 30px auto;
     padding: 20px;
-    background-color: #ffffff; /* Cor de fundo do formulário */
+    background-color: #ffffff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
@@ -112,7 +112,7 @@ th, td {
 }
 
 th {
-    background-color: #333; /* Cor da tabela combinando com a navbar */
+    background-color: #333;
     color: white;
 }
 
@@ -204,31 +204,68 @@ dialog::backdrop {
     background: rgba(0, 0, 0, 0.6);
 }
 
-/* Responsividade */
-@media (max-width: 768px) {
-    form {
-        padding: 15px;
-        margin: 20px auto;
-    }
+.form-group.tags-group {
+    display: flex;
+    flex-direction: column;
+}
 
-    .form-group {
-        margin-bottom: 1.2em;
-    }
+.input-container {
+    display: flex;
+    align-items: center;
+}
 
-    input[type="button"] {
-        font-size: 1em;
-        padding: .6em 1em;
-    }
+.input-container input {
+    flex: 1;
+    margin-right: 10px;
+}
 
-    .star-rating {
-        font-size: 1.5em;
-    }
+.tags-container {
+    margin-bottom: 1.5em;
+}
 
-    table {
-        font-size: 14px;
-    }
+.input-container {
+    display: flex;
+    align-items: center;
+}
 
-    th, td {
-        padding: 10px;
-    }
+.input-container input {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.add-tag-button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    font-size: 1em;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.add-tag-button:hover {
+    background-color: #45a049;
+}
+
+.error-message p {
+    color: #ff0000;
+    font-size: 0.9em;
+    margin: 0.5em 0 0;
+}
+
+/* Lista de tags */
+.tags-list {
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tag {
+    background-color: #e0e0e0;
+    border-radius: 4px;
+    padding: 5px 10px;
+    margin: 5px;
+    display: flex;
+    align-items: center;
 }
